[gd_scene load_steps=5 format=3 uid="uid://bwy77vvl6hqb7"]

[ext_resource type="Script" path="res://scripts/text_screen.gd" id="1_fvjyd"]
[ext_resource type="Texture2D" uid="uid://brkypigv3jjod" path="res://assets/ui/scene_transition.png" id="2_3g2t0"]
[ext_resource type="FontFile" uid="uid://b5ktx8r0h2wv2" path="res://assets/fonts/pixel5x5font_white.png" id="3_ytkvs"]
[ext_resource type="Texture2D" uid="uid://sba73hb0lo6u" path="res://assets/ui/gbjam12splash.png" id="4_2eb0w"]

[node name="TextScreen" type="CanvasLayer"]
script = ExtResource("1_fvjyd")

[node name="SceneTransition" type="Sprite2D" parent="."]
visible = false
position = Vector2(80, 72)
texture = ExtResource("2_3g2t0")

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 160.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_fonts/font = ExtResource("3_ytkvs")
theme_override_font_sizes/font_size = 6
text = "DEFAULT TEXT"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="skip_text" type="Label" parent="."]
visible = false
offset_left = 72.0
offset_top = 128.0
offset_right = 156.0
offset_bottom = 143.0
theme_override_colors/font_color = Color(0.329412, 0.329412, 0.329412, 1)
theme_override_fonts/font = ExtResource("3_ytkvs")
theme_override_font_sizes/font_size = 6
text = "hold K to skip"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="read_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="bgjam12splash" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(80, 72)
texture = ExtResource("4_2eb0w")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -3
offset_right = 160.0
offset_bottom = 144.0
color = Color(0, 0, 0, 1)
